--- a/index.html
+++ b/index.html
@@ -4,36 +4,23 @@
 
 <head>
   <title>Learn with Fun</title>
-   <meta name="viewport" content="width=device-width, 
-
-initial-scale=1">
-   <meta name="keywords" content="quiz, Learn, Fun, 
-
-Nabaraj, Dhungana, Upadhyaya, Paschimanchal, School, 
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <meta name="keywords" content="quiz, Learn, Fun, Nabaraj, Dhungana, Upadhyaya, Paschimanchal, School, 
 
 nabarajupadhyaya">
-   <meta name="author" content="Nabaraj Dhungana">
-  <link rel="stylesheet" 
-
-href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/cs
-
-s/bootstrap.min.css">
-  <script 
-
-src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/
-
-jquery.min.js"></script>
-  <script 
-
-src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/
-
-bootstrap.min.js"></script>
+   <meta name="author" content="Nabaraj Dhungana"><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   
   <style>
   body{
    background-color: #1abc9c;
    
   }
+    #divIntro{
+      margin: auto;
+      width: 60%;
+    }
   .bg-1 { 
       background-color: #1abc9c; /* Green */
       color: #ffffff;
@@ -462,9 +449,7 @@ id="yourAge"></span><span>years)</span></h4>
     </audio>
 </p> 
   
-<div id="divIntro" class="container-fluid bg-1 text-
-
-center">    
+<div id="divIntro" class="container-fluid bg-1 text-center">    
     <h2 class="title"> Learn with Fun </h2> 
     <h3 class="introduction">Rules:<br>Right Answer:  +1 
 
@@ -473,36 +458,26 @@ point.<br>Wrong Answer: -1 point.<br>
 
 right answer.<br>Play! Learn! and Have Fun!
     </h3>
-    <p class="btncontainer text-center" style="padding-
-
-bottom:30px" >
+    <p class="btncontainer text-center" style="padding-bottom:30px" >
     <input type="text" id="name" placeholder="Enter your 
 
 name:" maxlength="21" size="15" autofocus><br>
     <input type="number" id="age" placeholder="Your 
 
 age:" min="5" max="100"><br>
-    <button type="button" id="readybutton" class="btn 
-
-btn-primary btn-lg">I'm ready to play</button>  
+    <button type="button" id="readybutton" class="btn btn-primary btn-lg">I'm ready to play</button>  
 </div>    
 
 
 <!--Space for each question and its optional answers 
 
 alongwith next button-->
-<div id="div1" class="container-fluid bg-1 text-center 
-
-question">
+<div id="div1" class="container-fluid bg-1 text-center question">
     <div class="container">
         <h2>
         <p id="qspace">Which temple is this?</p> </h2>
     </div>
-    <div class= "container"><img 
-
-src="https://nabaraj.w3spaces.com/photos/manakamana-
-
-tample.jpg"></div> 
+    <div class= "container"><img src="https://nabaraj.w3spaces.com/photos/manakamana-tample.jpg"></div> 
     <div class= "container"> <h3>
        <p id= "wrongopt2" class="wronganswer"> Pathivara 
 
