--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@ $(document).ready(function(){
 
 <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel= "stylesheet" href="https://nabaraj.w3spaces.com/top_nav_css.css" >
+<link rel= "stylesheet" href="top_nav_css.css">
 
 <div class="topnav" id="myTopnav">
   <a href="#home.html" class="active">Home</a>
