--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@ $(document).ready(function(){
         <h2>
         <p id="qspace">Which temple is this?</p> </h2>
     </div>
-    <div class= "container"><img src="https://nabaraj.w3spaces.com/photos/manakamana-tample.jpg"></div> 
+    <div class= "container"><img src="photos/manakamana-tample.jpg"></div> 
     <div class= "container"> <h3>
        <p id= "wrongopt2" class="wronganswer"> Pathivara Temple</p> </h3>
     </div>
