--- a/index.html
+++ b/index.html
@@ -1015,7 +1015,7 @@ $(document).ready(function(){
         <h2>
         <p id="qspace">Which country's flag is this?" </p> </h2>
     </div>
-    <div class="container"><img src="https://nabaraj.w3spaces.com/photos/canada.jpg"></div>
+    <div class="container"><img src="photos/canada.jpg"></div>
        <div class= "container"> <h3>
        <p id= "wrongopt2" class="wronganswer"> The United States </p> </h3>
     </div>
@@ -1384,7 +1384,7 @@ $(document).ready(function(){
         <h2>
         <p id="qspace">Which country's flag is this? </p> </h2>
     </div>
-    <div class= "container"><img src="https://nabaraj.w3spaces.com/photos/Brazil.jpg"> </div>
+    <div class= "container"><img src="photos/Brazil.jpg"> </div>
     
        <div class= "container"> <h3>
        <p id= "wrongopt2" class="wronganswer"> Bolivia</p> </h3>
@@ -1480,7 +1480,7 @@ $(document).ready(function(){
         <h2>
         <p id="qspace">Which Nepali writer is shown in this picture? </p> </h2>
     </div>
-    <div class= "container"><img src="https://nabaraj.w3spaces.com/photos/Balkrishna.jpg"></div> 
+    <div class= "container"><img src="photos/Balkrishna.jpg"></div> 
     <div class= "container"> <h3>
        <p id= "rightopt" class="rightanswer">  Balkrishna Sama </p></h3>
     </div>
@@ -1528,7 +1528,7 @@ $(document).ready(function(){
         <h2>
         <p id="qspace">Who is shown in this picture?</p> </h2>
     </div>
-    <div class= "container"><img src="https://nabaraj.w3spaces.com/photos/smriti.jpg"></div> 
+    <div class= "container"><img src="photos/smriti.jpg"></div> 
     <div class= "container"> <h3>
        <p id= "wrongopt2" class="wronganswer"> Hema Malini</p> </h3>
     </div>
