--- a/index.html
+++ b/index.html
@@ -391,10 +391,10 @@ $(document).ready(function(){
 
 <div class="topnav" id="myTopnav">
   <a href="#home.html" class="active">Home</a>
-  <a href="./learn_english_x.html">Gr. X: English</a>
-  <a href="./about_me.html">About Me</a>
-  <a href="./learn_with_fun.html">Learn with Fun</a>
-  <a href="./photo_galary.html">Photo Gallary</a>
+  <a href="learn_english_x.html">Gr. X: English</a>
+  <a href="about_me.html">About Me</a>
+  <a href="learn_with_fun.html">Learn with Fun</a>
+  <a href="photo_galary.html">Photo Gallary</a>
 
 
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
@@ -537,7 +537,7 @@ $(document).ready(function(){
 <div id="div5" class="container-fluid bg-1 text-center question">
     <div class="container">
         <h2>
-        <p id="qspace"> Who is the chief minister of State No. 5? </p> </h2>
+        <p id="qspace"> Who is the chief minister of Lumbini Province? </p> </h2>
     </div>
     <div class= "container"> <h3>
        <p id= "rightopt" class="rightanswer"> Kul Prasad KC </p> </h3>
