--- a/index.html
+++ b/index.html
@@ -812,7 +812,7 @@ $(document).ready(function(){
 <div id="div16" class="container-fluid bg-1 text-center question">
     <div class="container">
         <h2>
-        <p id="qspace"> Who is the governor of state number 5 in Nepal? </p> </h2>
+        <p id="qspace"> Who is the governor of Lumbini province of Nepal? </p> </h2>
     </div>
     
        <div class= "container"> <h3>
@@ -931,7 +931,7 @@ $(document).ready(function(){
     <div class="container">
     <button type="button" id="btn20" class="btn btn-primary btn-lg">Next Question</button>  
     </div>
-</div> -->
+</div> 
 
 <!--Space for each question and its optional answers alongwith next button-->
 <div id="div21" class="container-fluid bg-1 text-center question">
