--- a/index.html
+++ b/index.html
@@ -413,8 +413,7 @@ $(document).ready(function(){
  
 <h4 class="bg-2 text-center" id="nameAge"><span>Player:&nbsp;</span><span id="namePlace"></span><span>&nbsp;(Age: </span><span id="yourAge"></span><span>years)</span></h4> 
 <p id="audioPlace">
-    <audio id="myAudio">
-    <source src="/sounds/click.wav" type="audio/wav">
+    <audio id="myAudio"> <source src="click.wav" type="audio/wav">
     </audio>
 </p> 
   
