--- a/about_me.html
+++ b/about_me.html
@@ -1,132 +1,97 @@
- <!DOCTYPE HTML>
-
+ <!DOCTYPE html>
 <html>
-
 <head>
-  <title>Learn with Fun</title>
-   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <meta name="keywords" content="quiz, Learn, Fun, Nabaraj, Dhungana, Upadhyaya, Paschimanchal, School, nabarajupadhyaya">
-   <meta name="author" content="Nabaraj Dhungana">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  
-  <style>
-  body{
-   background-color: #1abc9c;
-   
-  }
-  .bg-1 { 
-      background-color: #1abc9c; /* Green */
-      color: #ffffff;
-  }
-  .bg-2 { 
-      background-color: #1abc9c; /* Dark Blue */
-      color: DarkRed;
-  }
-  .bg-3 { 
-      background-color: #ffffff; /* White */
-      color: #555555;
-  }
-  .wronganswer, .rightanswer{
-   color: indigo;
-  }
-  .wrongTog{
-      color: red;
-  }
-  .wronganswer:hover{
-      color: white;
-      font-weight: bold;
-      transform: skewX(-40deg);
-      transition: 0.5s;
-  }
-  .rightanswer:hover{
-     color: white;
-     font-weight: bold;
-     transform: skewX(-40deg);
-     transition: 0.5s;
-  }
-  
-  
-  #bottomText{
-      height: 200px;
-      background-color: #1abc9c;
-      
-  }
-  .footer {
-    position: fixed;
-    font-size: 18px;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: OrangeRed;
-    color: white;
-    text-align: center;
-}
-#qNoPlace{
-    float: left;
-    padding-left: 7px;
-}
-#scorePlace{
-    float: right;
-    padding-right: 7px;
-}
-::-webkit-scrollbar { 
-    display: none; 
-}
-h3 strong{
-    color: FireBrick;
-}
-#name{
-    border: 3px solid OrangeRed;
-    color: red;
-    text-align: center;
-}
-#age{
-    border: 3px solid OrangeRed;
-    color: red;
-    text-align: center;
-}
-input[type=number]{
-    width:100px; 
+<style>
+body {
+  font-family: Arial;
+  margin: 0;
+ background-color: lightblue;
 }
 
-   </style>
+.mycard{
+ position: absolute;
+ display: inline-block;
+ width: 92vw;
+ height: 77vh;
+ box-sizing: border-box;
+ border-radius: 20px;
+ background-color: rgba(21, 8, 68);
+ background-image: linear-gradient(to right, rgba(21, 8, 68),  rgba(190, 0, 0));
+ color: white;
+ font-size: 5vw;
+ text-align: justify;
+ box-shadow: 2vw 2vw 2vw black;
+ border-left: 2vw groove red;
+ border-top: 2vw groove red;
+ backface-visibility: hidden;
+ padding: 7px;
+ margin: 0 auto;
+ overflow: auto;
+ top: 5vh;
+ left: 4vw;
+}
+.mycard:hover{
+ transform: translate(3px, 3px); 
+ box-shadow: 2vh 2vh 2vw black;
+}
+ul li{
+  text-align: left;
+}
+h3{
+  text-align: center;
+}
+ @media only screen and (min-width: 920px){
+  .mycard{
+      font-size: 2vw;
+      box-shadow: 1vh 1vh 2vh black;
+      border-left: 3vh groove red;
+      border-top: 2vh groove red;
+      height: 87vh;
+      width: 92vw;
+  } 
+ } 
+ 
+
+</style>
 </head>
+
 <body>
 
-<!-- Load an icon library to show a hamburger menu (bars) on small screens -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel= "stylesheet" href="top_nav_css.css">
 
-<div class="topnav" id="myTopnav">
-  <a href="#home.html" class="active">Home</a>
-  <a href="index.html">Take a Quiz</a>
-  <a href="learn_english_x.html">Gr X English</a>
-  <a href="learn_with_fun.html">Learn with Fun</a>
-  <a href="photo_galary.html">Photo Gallary</a>
-  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-    <i class="fa fa-bars"></i>
-  </a>
- </div> 
- <!--Space for each question and its optional answers alongwith next button-->
-<div id="div1" class="container-fluid bg-1 text-center question">
-    <div class="container">
-        <h2>
-        <p id="qspace">Page under construction</p> </h2>
-    </div>
+
+<div id="card5" class="mycard" onclick="this.style.display='none'"> <h3>Card 5</h3>This is a card.This is a card.
+
+</div> 
+<div id="card4" class="mycard" onclick="this.style.display='none'"> <h3>Card 4</h3>This is a card.This is a card.This is a card.This is a card.
+</div>
+<div id="card3" class="mycard" onclick="this.style.display='none'"> <h3>Card 3</h3>This is a card.This is a card.
+</div>
+<!-- card 1-->
+<div id="card2" class="mycard" onclick="this.style.display='none'"> 
+   <h3> Why Paschimanchal is the best place for your child?</h3> <hr>
+<p>There are several reasons. Some of them are mentioned here:</p>
+  <ul>
+    <li> team of dedicated and teaching faculty</li>
+    <li> never tiring efficient managerial team </li>
+    <li> well faciliated infrastructre </li>
+    <li> best suitable location </li>
+    <li> extra-curricular activities for holistic development
+ </ul>
+</p>
+
+
+</div>
+<!-- card 1-->
+<div id="card1" class="mycard" onclick="this.style.display='none'"> <h3>Welcome to Paschimanchal English School</h3> <hr>
+<p> Paschimanchal English School firmly beelieves that every child is special. Giving the right place and oppurtunity is essential for them. 
+  Many a times parents fall in a dillema about where to admit their child.     </p>
+
 </div>
 
-/<script>
-/* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
-function myFunction() {
-    var x = document.getElementById("myTopnav");
-    if (x.className === "topnav") {
-        x.className += " responsive";
-    } else {
-        x.className = "topnav";
-    }
-}
-</script>
+
+
 </body>
 </html>
+
+
+
