--- a/test.html
+++ b/test.html
@@ -125,7 +125,7 @@ h3{
 
 a card.This is a card.
 </div>
-<div id="card3" class="mycard" onclick="this.style.display='none'"> <h3>Card 3 <br> </h3>This is a card.This is a card.
+<div id="card3" class="mycard" onclick="this.style.display='none'"> <h3>Card 3 <br>शान्त र रमणीय वातावरणमा मनोवैज्ञानिक शिक्षण  </h3>This is a card.This is a card.
 </div>
 <!-- card 1-->
 <div id="card2" class="mycard" onclick="this.style.display='none'"> 
