--- a/about_me.html
+++ b/about_me.html
@@ -13,7 +13,7 @@ body {
 
 .mycard{
  position: absolute;
- display: none;
+ display: block;
  width: 92vw;
  height: 77vh;
  box-sizing: border-box;
