--- a/peshome.html
+++ b/peshome.html
@@ -204,7 +204,7 @@ body {
 <body>
 
 
-<img id="logo" src="C:\Users\Abhinav\Desktop\practice\pes_logo.jpg" width="100px" height="100px">
+<img id="logo" src="pes_logo.jpg" width="100px" height="100px">
 
 <!-- The banner above the navigation bar-->
 
