--- a/peshome.html
+++ b/peshome.html
@@ -161,6 +161,17 @@ body {
     width: 100%;
     text-align: left;
   }
+#topbanner{
+ height: 14vw;
+}
+.school-name{
+ font-size: 7vw;
+}
+#logo{
+width: 10vw;
+ height: auto;
+ left: 2%;
+}
 }
 @media screen and (max-width: 1140px) {
   .dropdown-content a {
@@ -187,17 +198,6 @@ body {
  text-align: center;
 }
 
-
-
-
-
-
-
-
-/* styling for largescreen devices*/
- @media only screen and (max-width: 768px){
-
-}
 </style>
 </head>
 
