--- a/peshome.html
+++ b/peshome.html
@@ -162,15 +162,16 @@ body {
     text-align: left;
   }
 #topbanner{
- height: 14vw;
+ height: 22vw;
 }
 .school-name{
- font-size: 7vw;
+ font-size: 9vw;
 }
 #logo{
-width: 10vw;
+width: 15vw;
  height: auto;
- left: 2%;
+ left: 45%;
+ top: 75px;
 }
 }
 @media screen and (max-width: 1140px) {
