--- a/peshome.html
+++ b/peshome.html
@@ -165,13 +165,14 @@ body {
  height: 22vw;
 }
 .school-name{
- font-size: 8vw;
+ font-size: 11vw;
 }
 #logo{
  width: 25vw;
  height: auto;
- left: 43%;
- top: 50px;
+ left: 42%;
+ top: 0;
+  z-index: -1;
 }
 }
 @media screen and (max-width: 1140px) {
