--- a/peshome.html
+++ b/peshome.html
@@ -159,20 +159,19 @@ body {
   .topnav.responsive .dropdown .dropbtn {
     display: block;
     width: 100%;
+    heigh: 20;
     text-align: left;
   }
 #topbanner{
- height: 22vw;
+ height: 30vw;
+ line-height: 10px;
 }
 .school-name{
- font-size: 11vw;
+ font-size: 12vw;
 }
 #logo{
- width: 25vw;
- height: auto;
- left: 42%;
- top: 0;
-  z-index: -1;
+ display: none;
+ 
 }
 }
 @media screen and (max-width: 1140px) {
