--- a/peshome.html
+++ b/peshome.html
@@ -163,11 +163,11 @@ body {
     text-align: left;
   }
 #topbanner{
- height: 30vw;
- line-height: 48px;
+ height: 20vw;
+
 }
 .school-name{
- font-size: 12vw;
+ font-size: 30px;
 }
 #logo{
  display: none;
