--- a/peshome.html
+++ b/peshome.html
@@ -163,11 +163,12 @@ body {
     text-align: left;
   }
 #topbanner{
- height: 20vw;
+ height: 25vw;
+  text-align: center;
 
 }
 .school-name{
- font-size: 30px;
+ font-size: 40px;
 }
 #logo{
  display: none;
