--- a/peshome.html
+++ b/peshome.html
@@ -174,7 +174,25 @@ body {
 }
 #logo{
  display: none;
- 
+}
+.school-name{
+  display: none;
+}
+.school-name-small{
+ display: block;
+ font-size: 8vw;
+ color: blue;
+ padding: 0;
+ margin: 0;
+ top: 0;
+
+}
+.first-name{
+ display: block;
+ font-size: 12vw;
+ color: blue;
+ padding: 0;
+ margin: 0;
 }
 }
 @media screen and (max-width: 1140px) {
