--- a/peshome.html
+++ b/peshome.html
@@ -231,7 +231,10 @@ body {
 <!-- The banner above the navigation bar-->
 
 
-<div id="topbanner"><p class="school-name">Paschimanchal English School</p></div>
+<div id="topbanner"><p class="school-name">Paschimanchal English School</p>
+    <p class="first-name">Paschimanchal </p>
+   <p class="school-name-small"> English School</p>
+</div>
 
 <!-- The navigation bar-->
 <div class="topnav" id="myTopnav">
