--- a/peshome.html
+++ b/peshome.html
@@ -41,6 +41,9 @@ body {
  left: 8%;
  top: 0;
 }
+  .school-name-small, .first-name{
+  display: none;
+  }
 
 
 
@@ -167,11 +170,6 @@ body {
   text-align: center;
 
 }
-.school-name{
- font-size: 34px;
- line-height: 42px;
- padding-top: 15px;
-}
 #logo{
  display: none;
 }
@@ -185,7 +183,8 @@ body {
  padding: 0;
  margin: 0;
  top: 0;
-
+ top: -28px;
+ position: relative;
 }
 .first-name{
  display: block;
