--- a/gptfile.html
+++ b/gptfile.html
@@ -48,7 +48,7 @@ input[type="radio"] {
     <div id="question-container"></div>
     <div id="choices-container"></div>
     <button id="next-question-btn">Next Question</button>
-    <script src="script.js"></script>
+    
 
 
 <script>
@@ -112,6 +112,7 @@ function nextQuestion() {
 document.getElementById("next-question-btn").addEventListener("click", nextQuestion);
 
 showQuestion(questions[currentQuestionIndex]);
-<script>
-</body>
+</script>
+    </body>
 </html>
+
