--- a/index.html
+++ b/index.html
@@ -1619,7 +1619,7 @@ function myFunction() {
 
 
   
- const textEl = document.getElementById('text');
+ const textEl = document.getElementById('bottomText');
 const text = 'Paschimanchal English School';
 const colors = ['red', 'green', 'blue', 'yellow', 'purple', 'orange'];
 
