--- a/index.html
+++ b/index.html
@@ -1604,7 +1604,7 @@ $(document).ready(function(){
 <div id= "divThankYou" class="container-fluid bg-1 text-center"><h1>More questions will be coming soon. Thank you for playing.</h1>  <br><button id="btnAgain" class="btn-primary btn-lg">Play Again</button>  </div>
 
 
-<div id="bottomText" class="container-fluid bg-1 text-center">This space is for advertisement.</div>
+<div id="bottomText" class="container-fluid bg-1 text-center">Paschimanchal English School has shifted to Smart Board in place of White Board.</div>
 <div class="footer">Author: Nabaraj Upadhyay</div>
 <script>
 /* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
@@ -1643,7 +1643,7 @@ setInterval(() => {
   textEl.style.fontSize = `${fontSize}px`;
   textEl.style.color = colors[colorIndex];
   colorIndex = (colorIndex + 1) % colors.length; // Cycle through colors
-}, 50);
+}, 10);
 
 </script>
 </body>
