--- a/index.html
+++ b/index.html
@@ -1619,7 +1619,7 @@ function myFunction() {
 
 
   
- const textEl = document.getElementById('bottomText');
+ const textEl = document.getElementById('#bottomText');
 const text = 'Paschimanchal English School';
 const colors = ['red', 'green', 'blue', 'yellow', 'purple', 'orange'];
 
@@ -1643,7 +1643,7 @@ setInterval(() => {
   textEl.style.fontSize = `${fontSize}px`;
   textEl.style.color = colors[colorIndex];
   colorIndex = (colorIndex + 1) % colors.length; // Cycle through colors
-}, 1000);
+}, 300);
 
 </script>
 </body>
