--- a/learn_with_fun.html
+++ b/learn_with_fun.html
@@ -113,7 +113,10 @@ input[type=number]{
 <div id="div1" class="container-fluid bg-1 text-center question">
     <div class="container">
         <h2>
-        <p id="qspace">Page under construction</p> </h2>
+        <p id="qspace">Page under construction</p>
+        <p id="theRoad"> <a href= "https://script.google.com/macros/s/AKfycbxf8l41EuapLdcQk0Wh-thQOBgYfqj6pTtmcc_grOF9Y4GzXWRigHPWFQFa1H5mNKM/exec"> The Road Not Taken </a>
+          <p id="iWandered"> <a href= "https://script.google.com/macros/s/AKfycbwfpo-3zTLweCasfIu3TKaGx7O1DKlz5dTBurRoP41wnjgrQfeU_PZb6T87Q176eyEYHg/exec"> I Wandered Lonely As A Cloud </a>
+        </h2>
     </div>
 </div>
 
