--- a/learn_with_fun.html
+++ b/learn_with_fun.html
@@ -114,8 +114,8 @@ input[type=number]{
     <div class="container">
         <h2>
         <p id="qspace">Page under construction</p>
-        <p id="theRoad"> <a href= "https://script.google.com/macros/s/AKfycbxf8l41EuapLdcQk0Wh-thQOBgYfqj6pTtmcc_grOF9Y4GzXWRigHPWFQFa1H5mNKM/exec"> The Road Not Taken </a></p>
-          <p id="iWandered"> <a href= "https://script.google.com/macros/s/AKfycbwfpo-3zTLweCasfIu3TKaGx7O1DKlz5dTBurRoP41wnjgrQfeU_PZb6T87Q176eyEYHg/exec"> I Wandered Lonely As A Cloud </a></p>
+        <p id="theRoad"> <a style="text-decoration:none" href= "https://script.google.com/macros/s/AKfycbxf8l41EuapLdcQk0Wh-thQOBgYfqj6pTtmcc_grOF9Y4GzXWRigHPWFQFa1H5mNKM/exec"> The Road Not Taken </a></p>
+          <p id="iWandered"> <a style="text-decoration:none" href= "https://script.google.com/macros/s/AKfycbwfpo-3zTLweCasfIu3TKaGx7O1DKlz5dTBurRoP41wnjgrQfeU_PZb6T87Q176eyEYHg/exec"> I Wandered Lonely As A Cloud </a></p>
         </h2>
     </div>
 </div>
