--- a/about_me.html
+++ b/about_me.html
@@ -54,39 +54,13 @@ body {
 h3{
   text-align: center;
 }
- @media only screen and (min-width: 920px){
-  .mycard{
-      font-size: 2vw;
-      height: 87vh;
-      width: 92vw;
-  } 
-#topbanner{
- height: 10vh;
- top: 0;
-}
-#navbar{
- height: 8vh;
-}
-#footer{
- height: 8vh;
-}
-#left{
- height: 76vh;
- display: block;
-}
-.big-name{
- font-size: 3vw;
- color: blue;
- padding: 0;
- margin: 0;
-}
-} 
+ 
 </style>
 </head>
 
 <body>
 
-<div id="topbanner"><p class="big-name">Paschimanchal English School</p></div>
+<div id="topbanner"><p class="big-name">Here will be the Name of the organization</p></div>
 <div id="navbar">Here's the navigation bar.</div>
 
 </div>
