--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@ $(document).ready(function(){
 <div class="topnav" id="myTopnav">
   <a href="#home.html" class="active">Home</a>
   <a href="learn_english_x.html">Gr. X: English</a>
-  <a href="about_me.html">About Me</a>
+  <a href="#">About Me</a>
   <a href="learn_with_fun.html">Learn with Fun</a>
   <a href="photo_galary.html">Photo Gallary</a>
 
