--- a/index.html
+++ b/index.html
@@ -131,6 +131,11 @@
           <h3>Book Review Writing</h3>
           <p>Turn readers into explorers with your book reviews.</p>
         </div>
+        <a href="writing/newsReport/newsArticle.html" class="topic-card">
+          <i class="fas fa-newspaper"></i>
+          <h3>News Article Writing</h3>
+          <p>From plot to performance—write reviews that resonate.</p>
+        </a>
         <div class="topic-card">
           <i class="fas fa-envelope"></i>
           <h3>Letter Writing</h3>
