--- a/writing/newsReport/newsArticle.html
+++ b/writing/newsReport/newsArticle.html
@@ -312,7 +312,7 @@
             <div id="sample-article-2" class="container-news" style="display: none;">
                 <h1 class="headline">Bus Hits Car, 3 Dead</h1>
                 <p class="byline">by Staff Reporter, The Nagarik News</p>
-                <p class="dateline">Butwal, 23rd June, 2022</p>
+                <p class="dateline">Butwal, 23rd June</p>
                 <p><span class="lead">A bus travelling from Narayanghat to Pokhara rammed into a car yesterday, killing 3 people on the spot, near Kurintar during the early hours of the morning.</span></p>
                 <p><span class="body">In an attempt to overtake the lorry in front of it, the bus lost control leading to a head-on collision with a car which was coming from the opposite direction. All the passengers in the car were killed on the spot. The passengers of the bus who had suffered minor injuries were given first aid at the nearby hospital. An eyewitness said that the bus driver was at fault as he was trying to overtake at a spot where there was no space.</span></p>
                 <p><span class="body"> <span class="quote">"We suddenly heard a big bang followed by an outcry,"</span> said Manish Shrestha, one of the bus passangers. A patrolling police van, which was nearby, immediately arrived at the accident site and directed the rescue operations. The bus driver was arrested on the spot. An enquiry has been initiated.</span></p>
@@ -323,7 +323,7 @@
             <div id="sample-article-3" class="container-news" style="display: none;">
                 <h1 class="headline">Residents Launch Campaign Against Child Labour</h1>
                 <p class="byline">By Ankit Mourya</p>
-                <p class="dateline">Butwal, 24th January, 2022</p>
+                <p class="dateline">Butwal, 24th January</p>
                 <p><span class="lead">A campaign to raise awareness and enforce a ban on the heinous crime of child labour was launched last week by Buddha Colony Resident Welfare Association of Manigram in Tilottama Municipality.</span></p>
                 <p><span class="body">The municipality has an extended market area where migrants from the northern hills and surrounding villages dwell for a living. They force their children even below 14 years of age to work in dhabas, in cycle repair shops, as well as in pavement stalls. The poor children remain illiterate just like their parents.</span></p>
                 <p><span class="body">The campaign received the support of residents, businessmen and labour coming together and participating wholeheartedly.</span></p>
