--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <a href="writing/newsReport/newsArticle.html" class="topic-card">
           <i class="fas fa-newspaper"></i>
           <h3>News Article Writing</h3>
-          <p>From plot to performance—write reviews that resonate.</p>
+          <p>Turn event into new; let all be informed.</p>
         </a>
         <div class="topic-card">
           <i class="fas fa-envelope"></i>
