--- a/routine10L.html
+++ b/routine10L.html
@@ -81,14 +81,14 @@
   <script>
     // Class routine and teacher names
     const routine = [
-      { start: "6:10", end: "6:50", period: "1st Period", subject: "Science", teacher: "Substitution" },
+      { start: "6:10", end: "6:50", period: "1st Period", subject: "Computer", teacher: "R. Dhakal" },
       { start: "6:50", end: "7:30", period: "2nd Period", subject: "English", teacher: "N. Upadhyay" },
       { start: "7:30", end: "8:10", period: "3rd Period", subject: "Mathematics", teacher: "S. Khan" },
       { start: "8:10", end: "8:50", period: "4th Period", subject: "Opt. Maths", teacher: "S. Khan" },
       { start: "8:50", end: "9:00", period: "Recess Time", subject: "", teacher: "" },
       { start: "9:00", end: "9:40", period: "5th Period", subject: "Social St.", teacher: "U. Pandey" },
       { start: "9:40", end: "10:20", period: "6th Period", subject: "Nepali", teacher: "H. Pandey" },
-      { start: "10:20", end: "11:00", period: "7th Period", subject: "Computer", teacher: "R. Dhakal" }
+      { start: "10:20", end: "11:00", period: "7th Period", subject: "Science", teacher: "A. Kurmi" }
     ];
 
     // Function to get the current period
