--- a/routine10G.html
+++ b/routine10G.html
@@ -87,8 +87,8 @@ body {
       { start: "8:10", end: "8:50", period: "4th Period", subject: "Population", teacher: "U. Pandey" },
       { start: "8:50", end: "9:00", period: "Recess Time", subject: "", teacher: "" },
       { start: "9:00", end: "9:40", period: "5th Period", subject: "Nepali", teacher: "H. Pandey" }, 
-      { start: "9:40", end: "10:20", period: "6th Period", subject: "Accounts", teacher: "P. Singh" },
-      { start: "10:20", end: "11:00", period: "7th Period", subject: "Science", teacher: "Substitution" }  
+      { start: "9:40", end: "10:20", period: "6th Period", subject: "Science", teacher: "A. Kurmi" },
+      { start: "10:20", end: "11:00", period: "7th Period", subject: "Account", teacher: "P. Singh" }  
     ];
 
     // Function to get the current period
