--- a/routine10G.html
+++ b/routine10G.html
@@ -81,14 +81,14 @@ body {
   <script>
     // Class routine and teacher names
     const routine = [
-      { start: "6:10", end: "6:50", period: "1st Period", subject: "English", teacher: "N. Upadhyay" },
-      { start: "6:50", end: "7:30", period: "2nd Period", subject: "Mathematics", teacher: "S. Khan" },
-      { start: "7:30", end: "8:10", period: "3rd Period", subject: "Social St.", teacher: "U. Pandey" },
+      { start: "6:10", end: "6:50", period: "1st Period", subject: "Nepali", teacher: "H. Pandey" },
+      { start: "6:50", end: "7:30", period: "2nd Period", subject: "English", teacher: "N. Upadhyay" },
+      { start: "7:30", end: "8:10", period: "3rd Period", subject: "Science", teacher: "A. Kurmi" },
       { start: "8:10", end: "8:50", period: "4th Period", subject: "Population", teacher: "U. Pandey" },
       { start: "8:50", end: "9:00", period: "Recess Time", subject: "", teacher: "" },
-      { start: "9:00", end: "9:40", period: "5th Period", subject: "Nepali", teacher: "H. Pandey" }, 
-      { start: "9:40", end: "10:20", period: "6th Period", subject: "Science", teacher: "A. Kurmi" },
-      { start: "10:20", end: "11:00", period: "7th Period", subject: "Account", teacher: "P. Singh" }  
+      { start: "9:00", end: "9:40", period: "5th Period", subject: "Social St.", teacher: "U. Pandey" }, 
+      { start: "9:40", end: "10:20", period: "6th Period", subject: "Account", teacher: "P. Singh" },
+      { start: "10:20", end: "11:00", period: "7th Period", subject: "Mathematics", teacher: "S. Khan" }  
     ];
 
     // Function to get the current period
