--- a/writing/menu/menu.html
+++ b/writing/menu/menu.html
@@ -168,6 +168,7 @@
         
         :root {
             --primary-color: #1A5F7A;
+            --bgprimary-color: #41c1f2;
             --accent-color: #E8C07D;
             --dark-text: #272829;
             --light-text: #4F4F4F;
@@ -183,7 +184,7 @@
         }
 
         .header-banner {
-            background-color: var(--primary-color);
+            background-color: var(--bgprimary-color);
             color: white;
             padding: 30px 20px;
             text-align: center;
@@ -700,8 +701,9 @@
             <div class="menu-container">
                 <div class="header-banner">
                     <h1 class="restaurant-name">Himali Daanfe Restaurant</h1>
-                    <p class="tagline">"Authentic Flavors of the Himalayas"</p>
                     <p class="contact-info">New Road, Kathmandu, Nepal | Tel: +977-1-4567890</p>
+                    <p class="tagline">"Authentic Flavors of the Himalayas"</p>
+                    
                 </div>
                 <div class="menu-content">
                     <div class="menu-section">
