--- a/writing/menu/menu.html
+++ b/writing/menu/menu.html
@@ -168,7 +168,6 @@
         
         :root {
             --primary-color: #1A5F7A;
-            --bgprimary-color: #41c1f2;
             --accent-color: #E8C07D;
             --dark-text: #272829;
             --light-text: #4F4F4F;
@@ -184,7 +183,7 @@
         }
 
         .header-banner {
-            background-color: var(--bgprimary-color);
+            background-color: var(--primary-color);
             color: white;
             padding: 30px 20px;
             text-align: center;
