--- a/writing/newsReport/newsArticle.html
+++ b/writing/newsReport/newsArticle.html
@@ -253,7 +253,7 @@
     <div class="container">
         <div class="main-content">
             <div class="container-news-instruction">
-                <h1>How to Write a News Article</h1>
+                <h1>How to Write a News Report</h1>
 
                 <div class="callout">
                     <strong>Tip:</strong> A news article should be clear, concise, and factual. It typically includes a headline, byline, dateline, lead, body, and conclusion.
@@ -273,7 +273,7 @@
                 </div>
 
                 <h2>3. Dateline</h2>
-                <p>The dateline indicates the location and date of the story. It typically appears at the beginning of the article.</p>
+                <p>The dateline indicates the location and date of the story. It typically appears at the beginning of the report.</p>
                 <div class="example-news">
                     <strong>Example:</strong> "Butwal, October 10"
                 </div>
@@ -298,7 +298,7 @@
             </div>
 
             <div id="sample-article-1" class="container-news">
-                <p class="callout">Here is a sample news article for reference:</p>
+                <p class="callout">Here is a sample news report for reference:</p>
                 <h1 class="headline">Local School Wins National Science Competition</h1>
                 <p class="byline">By Manoj Bista</p>
                 <p class="dateline">Butwal, October 10</p>
@@ -334,9 +334,9 @@
         <div class="sidebar">
             <div class="infoContainer">
                 <p class="callout">A <strong>headline</strong> is the title of the news article. It should be catchy and summarize the main point.</p>
-                <p class="example-news">The <strong>byline</strong> credits the author of the article. It usually appears below the headline.</p>
+                <p class="example-news">The <strong>byline</strong> credits the author of the news. It usually appears below the headline.</p>
                 <p class="callout">The <strong>dateline</strong> indicates the location and date of the story. It typically appears at the beginning of the article.</p>
-                <p class="example-news">The <strong>lead paragraph</strong> is the most important part of the article. It answers the 5 W's and 1 H.</p>
+                <p class="example-news">The <strong>lead paragraph</strong> is the most important part of the news report. It answers the 5 W's and 1 H.</p>
                 <p class="callout">The <strong>body</strong> provides detailed information, quotes, and background to support the lead.</p>
                 <p class="example-news">The <strong>conclusion</strong> summarizes the article and provides a closing thought or call to action.</p>
                 <p class="callout">A <strong>quote</strong> or<strong> quotation</strong> is a direct statement from a source, such as an eyewitness, expert, or official, used to provide credibility and a personal perspective. It adds authenticity to the story, making it more engaging and trustworthy for the reader.</p>
@@ -350,9 +350,9 @@
                 <button id="quoteBtn" class="showBtn">Show Quotation</button>
                 <button id="bodyBtn" class="showBtn">Show Body</button>
                 <button id="conclusionBtn" class="showBtn">Show Conclusion</button>
-                <button id="sample2Btn" class="showBtn">Load Sample Article 2</button>
-                <button id="sample3Btn" class="showBtn">Load Sample Article 3</button>
-                <p id="btn-instruction" class="callout">Click the buttons above to highlight different parts of the news article or switch between sample articles.</p>
+                <button id="sample2Btn" class="showBtn">Load Sample Report 2</button>
+                <button id="sample3Btn" class="showBtn">Load Sample Report 3</button>
+                <p id="btn-instruction" class="callout">Click the buttons above to highlight different parts of the news article or switch between sample reports.</p>
             </div>
         </div>
     </div>
