--- a/index.html
+++ b/index.html
@@ -141,6 +141,11 @@
           <h3>Rules/Regulations Writing</h3>
           <p>Oblige or prohibit: Learn to write rules effectively.</p>
         </a>
+        <a href="writing/chartInterpretation/chartInterpretation.html" class="topic-card">
+          <i class="fas fa-table"></i>
+          <h3>Chart Interpretation Writing</h3>
+          <p>Interpret charts or tables: Let the data speak itself.</p>
+        </a>
         <div class="topic-card">
           <i class="fas fa-envelope"></i>
           <h3>Letter Writing</h3>
