--- a/index.html
+++ b/index.html
@@ -146,6 +146,11 @@
           <h3>Chart Interpretation Writing</h3>
           <p>Interpret charts or tables: Let the data speak itself.</p>
         </a>
+        <a href="writing/condolence/condolence.html" class="topic-card">
+          <i class="fas fa-table"></i>
+          <h3>Condolence Writing</h3>
+          <p>Expressing Sympathy with Sincerity and Grace.</p>
+        </a>
         <div class="topic-card">
           <i class="fas fa-envelope"></i>
           <h3>Letter Writing</h3>
