--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <li><a href="#grammar">Grammar</a></li>
         <li><a href="#writing">Writing Skills</a></li>
         <li><a href="gk/gkQuiz.html">GK Quiz</a></li>
+        <li><a href="https://online.fliphtml5.com/vzmrl/cjqo/" target="blank">English Book IX</a></li>
+         <li><a href="https://online.fliphtml5.com/vzmrl/bvpp/" target="blank">English Book X</a></li>
         <li><a href="#about">About Me</a></li>
       </ul>
     </div>
